--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -49,13 +49,19 @@ spring:
                 UpdateTargetChannel:
                     destination: gateway
                     group: targetDetection
+                ShareInChannel:
+                    destination: amongedge
+                    group: edges
+                ShareOutChannel:
+                    destination: amongedge
+                    group: edges
 #                output:
 #                    destination: topic-jhipster
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
         url: jdbc:mysql://localhost:3306/edge?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
         username: root
-        password: root
+        password: lcly6557
         hikari:
             poolName: Hikari
             auto-commit: false
@@ -96,7 +102,7 @@ spring:
                 enabled: true
 
 server:
-    port: 8081
+    port: 8088
 
 # ===================================================================
 # JHipster specific properties
