game信息获取初始百分比

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -55,6 +55,12 @@ spring:
                 ShareOutChannel:
                     destination: amongedge
 #                    group: edges
+                GameInChannel:
+                    destination: gamedge
+                    #                    group: edges    // 非持久队列
+                GameOutChannel:
+                    destination: gamedge
+                #                    group: edges
 #            Durability:
 
 #                output:
