--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -17,16 +17,16 @@
 feign:
     hystrix:
         enabled: true
-#    client:
-#        config:
-#            default:
-#                connectTimeout: 5000
-#                readTimeout: 5000
+    client:
+        config:
+            default:
+                connectTimeout: 5000000000
+                readTimeout: 5000000000
 
 
 ribbon:
-    ConnectTimeout: 6000000000
-    ReadTimeout: 6000000000
+    ConnectTimeout: 60000000000
+    ReadTimeout: 60000000000
 # See https://github.com/Netflix/Hystrix/wiki/Configuration
 hystrix:
     command:
@@ -36,7 +36,7 @@ hystrix:
                     strategy: SEMAPHORE
 # See https://github.com/spring-cloud/spring-cloud-netflix/issues/1330
                     thread:
-                        timeoutInMilliseconds: 6000000000
+                        timeoutInMilliseconds: 60000000000
     shareSecurityContext: true
 
 management:
