--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -16,7 +16,7 @@
 
 feign:
     hystrix:
-        enabled: true
+        enabled: false
     client:
         config:
             default:
@@ -32,6 +32,8 @@ hystrix:
     command:
         default:
             execution:
+                timeout:
+                    enabled: false
                 isolation:
                     strategy: SEMAPHORE
 # See https://github.com/spring-cloud/spring-cloud-netflix/issues/1330
